tests/regression/errors/basic/syntax_error_1.csd
// Syntax error test 1 - missing semicolon
sus x drip = 1
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
